<resources>
    <string name="app_name">MyMuseum</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="sair">Sair</string>
    <string name="contactos">Contactos</string>
    <string name="comprar_bilhete">Comprar Bilhete</string>
    <string name="mensagens">Mensagens</string>
    <string name="terminar_sessao">Terminar Sessão</string>
    <string name="perfil">Perfil</string>
    <string name="categorias">Categorias</string>
    <string name="titulo">Título</string>
    <string name="descricao">Descrição</string>
    <string name="museus">Museus</string>
    <string name="nome_obra">NomeObra</string>
    <string name="valor_inicial">0.00</string>
    <string name="simbolo_euro">€</string>
    <string name="_7_dias">7 dias</string>
    <string name="_6_dias">6 dias</string>
    <string name="_5_dias">5 dias</string>
    <string name="_4_dias">4 dias</string>
    <string name="_3_dias">3 dias</string>
    <string name="_2_dias">2 dias</string>
    <string name="_1_dia">1 dia</string>
    <string name="preco_ultimos_7">Preço nos últimos 7 dias</string>
    <string name="nome_museu">NomeMuseu</string>
    <string name="text_conselho">Viana</string>
    <string name="text_destrito">Viana</string>
    <string name="text_morada">Rua dos designers</string>
    <string name="text_telemovel">999 888 777</string>
    <string name="user_email">user1@ipvc.pt</string>
    <string name="username">user1</string>
    <string name="username_field">Nome</string>
    <string name="user_email_field">Email</string>
    <string name="telemovel_field">Telemóvel</string>
    <string name="morada_field">Morada</string>
    <string name="distrito_field">Distrito</string>
    <string name="conselho_field">Conselho</string>
    <string name="telefone_field">Telefone</string>
    <string name="telefone">253 171 555</string>
    <string name="nosso_telemovel">967 333 213</string>
    <string name="ou">OU</string>
    <string name="enviar_mensagem">Enviar Mensagem</string>
    <string name="escreva_mensagem">Escreva-nos uma mensagem</string>
    <string name="consultar_precos">Consultar Preços</string>
    <string name="data">Data</string>
    <string name="tipo_de_bilhete">Tipo de Bilhete</string>
    <string name="quantidade">Quantidade</string>
    <string name="total_a_pagar">Total a Pagar</string>
    <string name="limpar_dados">Limpar dados</string>
    <string name="pagar">Pagar</string>
    <string name="nome_museu_1">Este museu</string>
    <string name="nome_museu_2">Aquele museu</string>
    <string name="nome_museu_3">Outro Museu</string>
    <string name="nome_tipo_bilhete_1">Individual</string>
    <string name="nome_tipo_bilhete_2">Para duas Pessoas</string>
    <string name="nome_tipo_bilhete_3">Familiar (4 pessoas)</string>
    <string name="nome_field">Nome</string>
    <string name="nome_hint">Digite o seu Nome</string>
    <string name="email_hint">Digite o seu Email</string>
    <string name="palavra_passe_field">Palavra-passe</string>
    <string name="palavra_passe_hint">Digite a sua palavra-passe</string>
    <string name="comfirma_passe_field">Comfirmação da palavra-passe</string>
    <string name="comfirma_passe_hint">Comfirme a sua palavra-passe</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="voltar">Voltar</string>
    <string name="iniciar_sessao">Iniciar Sessão</string>
    <string name="registar">Registar</string>
    <string name="recebemos_mensagem">Recebemos a sua mensagem, obrigado!!!</string>
    <string name="continuar">Continuar</string>
    <string name="online_text">Online</string>
    <string name="local_fisico_text">Local Físico</string>
    <string name="mensagem_tipo_pagamento">Escolha a forma de como pretende fazer o pagamento</string>
    <string name="pagamento_pendente">Pagamento Pendente! \n\nObrigado por ter escolhido visitar um dos nossos museus, ficamos à sua espera</string>
    <string name="multibanco_sucesso">O seu pagamento ficou no estado pendente, por favor termine o pagamento numa caixa de multibanco mais próxima!!!</string>
    <string name="outros_sucesso">O seu pagamento foi concluido com sucesso!!!</string>

</resources>
