<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mymuseum.ui.home.HomeFragment"
        android:label="@string/museus"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_contactos"
        android:name="com.example.mymuseum.ui.contactos.ContactosFragment"
        android:label="@string/contactos"
        tools:layout="@layout/fragment_contactos" />

    <fragment
        android:id="@+id/nav_terminar_sessao"
        android:name="com.example.mymuseum.ui.terminarsessao.TerminarSessaoFragment"
        android:label="@string/terminar_sessao"
        tools:layout="@layout/fragment_mensagens" />

    <fragment
        android:id="@+id/nav_comprar_bilhete"
        android:name="com.example.mymuseum.ui.comprarbilhete.ComprarBilheteFragment"
        android:label="@string/comprar_bilhete"
        tools:layout="@layout/fragment_mensagens" />

    <fragment
        android:id="@+id/nav_mensagens"
        android:name="com.example.mymuseum.ui.mensagens.MensagensFragment"
        android:label="@string/mensagens"
        tools:layout="@layout/fragment_mensagens" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.mymuseum.ui.perfil.PerfilFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>