<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/registerID"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:id="@+id/textView_resgister_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margins"
        android:text="@string/nome_field"
        android:textColor="@color/GlobalTextColor"
        android:textSize="@dimen/subtitle_size"
        app:layout_constraintStart_toStartOf="@+id/editText_resgister_nome"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_resgister_nome"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/small_margins"
        android:layout_marginEnd="@dimen/default_margin"
        android:hint="@string/nome_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_resgister_nome" />

    <TextView
        android:id="@+id/textView_resgister_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/user_email_field"
        android:textColor="@color/GlobalTextColor"
        android:textSize="@dimen/subtitle_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_resgister_email"
        app:layout_constraintTop_toBottomOf="@+id/editText_resgister_nome" />

    <EditText
        android:id="@+id/editText_resgister_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/small_margins"
        android:layout_marginEnd="@dimen/default_margin"
        android:hint="@string/email_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_resgister_email" />

    <TextView
        android:id="@+id/textView_resgister_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/palavra_passe_field"
        android:textColor="@color/GlobalTextColor"
        android:textSize="@dimen/subtitle_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_resgister_email"
        app:layout_constraintTop_toBottomOf="@+id/editText_resgister_email" />

    <EditText
        android:id="@+id/editText_resgister_pass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/small_margins"
        android:layout_marginEnd="@dimen/default_margin"
        android:hint="@string/palavra_passe_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_resgister_pass" />

    <TextView
        android:id="@+id/textView_resgister_pass_conf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/comfirma_passe_field"
        android:textColor="@color/GlobalTextColor"
        android:textSize="@dimen/subtitle_size"
        app:layout_constraintStart_toStartOf="@+id/editText_resgister_pass"
        app:layout_constraintTop_toBottomOf="@+id/editText_resgister_pass"/>

    <EditText
        android:id="@+id/editText_resgister_pass_conf"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/small_margins"
        android:layout_marginEnd="@dimen/default_margin"
        android:hint="@string/comfirma_passe_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_resgister_pass_conf" />


    <Button
        android:id="@+id/button_register_registar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/criar_conta"
        app:layout_constraintBottom_toTopOf="@+id/button_register_voltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_resgister_pass_conf"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_register_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/voltar"
        android:onClick="goToLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>