<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.contactos.ContactosFragment">

    <TextView
        android:id="@+id/contactos_telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spaced_margins"
        android:text="@string/telefone_field"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="@dimen/subtitle_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contactos_telefone_numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBaseline_toBaselineOf="@+id/contactos_telefone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/contactos_telefone" />

    <TextView
        android:id="@+id/contactos_telemovel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/telemovel_field"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="@dimen/subtitle_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/contactos_telefone"
        app:layout_constraintTop_toBottomOf="@+id/contactos_telefone" />

    <TextView
        android:id="@+id/contactos_telemovel_numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nosso_telemovel"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBaseline_toBaselineOf="@+id/contactos_telemovel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/contactos_telefone" />

    <TextView
        android:id="@+id/contactos_ou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margins"
        android:text="@string/ou"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="@dimen/title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactos_telemovel" />

    <TextView
        android:id="@+id/contactos_mensagem_mensagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margins"
        android:text="@string/escreva_mensagem"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactos_ou" />

    <EditText
        android:id="@+id/contactos_mensagem_corpo"
        android:layout_width="0dp"
        android:layout_height="@dimen/default_corpo_mensagens"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactos_mensagem_mensagem" />

    <Button
        android:id="@+id/contactos_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar_mensagem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactos_mensagem_corpo" />

</androidx.constraintlayout.widget.ConstraintLayout>