<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/pagamentoOnline_1Id"
    tools:context=".activities.PagamentoOnline_1_Activity">

    <TextView
        android:id="@+id/pagamento_online_fat_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spaced_margins"
        android:layout_marginTop="@dimen/big_margins"
        android:text="@string/username_field"
        android:textColor="@color/newCorTexto"
        android:textSize="@dimen/subtitle_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_online_fat_passos" />

    <TextView
        android:id="@+id/pagamento_online_fat_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spaced_margins"
        android:text="@string/user_email_field"
        android:textColor="@color/newCorTexto"
        android:textSize="@dimen/subtitle_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pagamento_online_fat_nome"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_online_fat_nome" />

    <TextView
        android:id="@+id/pagamento_online_fat_telemovel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spaced_margins"
        android:text="@string/telemovel_field"
        android:textColor="@color/newCorTexto"
        android:textSize="@dimen/subtitle_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pagamento_online_fat_email"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_online_fat_email" />

    <TextView
        android:id="@+id/pagamento_online_fat_morada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spaced_margins"
        android:text="@string/morada_field"
        android:textColor="@color/newCorTexto"
        android:textSize="@dimen/subtitle_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pagamento_online_fat_telemovel"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_online_fat_telemovel" />

    <TextView
        android:id="@+id/pagamento_online_fat_codigo_postal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spaced_margins"
        android:text="Código Postal"
        android:textColor="@color/newCorTexto"
        android:textSize="@dimen/subtitle_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pagamento_online_fat_morada"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_online_fat_morada" />


    <EditText
        android:id="@+id/pagamento_online_fat_nome_text"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spaced_margins"
        android:hint="@string/username_field"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/pagamento_online_fat_nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/pagamento_online_fat_nome" />

    <EditText
        android:id="@+id/pagamento_online_fat_email_text"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spaced_margins"
        android:hint="@string/user_email_field"
        android:inputType="textWebEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@+id/pagamento_online_fat_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/pagamento_online_fat_email" />

    <EditText
        android:id="@+id/pagamento_online_fat_telemovel_text"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spaced_margins"
        android:hint="@string/telemovel_field"
        android:inputType="number"
        android:maxLength="@integer/telemovel"
        app:layout_constraintBaseline_toBaselineOf="@+id/pagamento_online_fat_telemovel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/pagamento_online_fat_telemovel" />

    <EditText
        android:id="@+id/pagamento_online_fat_morada_text"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spaced_margins"
        android:hint="@string/morada_field"
        app:layout_constraintBaseline_toBaselineOf="@+id/pagamento_online_fat_morada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/pagamento_online_fat_morada" />

    <EditText
        android:id="@+id/pagamento_online_fat_codigo_postal_text"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spaced_margins"
        android:hint="Código Postal"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/pagamento_online_fat_codigo_postal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/pagamento_online_fat_codigo_postal" />

    <Button
        android:id="@+id/pagamento_online_fat_button_continuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continuar"
        android:onClick="goToStep2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_online_fat_codigo_postal" />

    <TextView
        android:id="@+id/pagamento_online_fat_passos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="Passo 1/3"
        android:textColor="@color/newCorTexto"
        android:textSize="@dimen/title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>